# cpp-stack-exercise

./: CMakeLists.txt  README.md
include/: node.hpp  stack.hpp
src/: main.cpp  node.cpp  stack.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_stack_push_pop.cpp
